Replace Arrays.asList(…)/Collections.singleton/-List(…) with List/Set.of(…)