@@ -4,7 +4,6 @@ import static de.bwaldvogel.mongo.backend.TestUtils.json;
 import static de.bwaldvogel.mongo.backend.TestUtils.toArray;
 
 import java.nio.file.Path;
-import java.util.Arrays;
 import java.util.List;
 
 import org.bson.Document;
@@ -66,7 +65,7 @@ class H2OnDiskBackendTest extends AbstractBackendTest {
 
     @Test
     void testShutdownAndRestartOpensDatabasesAndCollections() throws Exception {
-        List<String> dbs = Arrays.asList("local", "testdb1", "testdb2");
+        List<String> dbs = List.of("local", "testdb1", "testdb2");
         for (String db : dbs) {
             for (String coll : new String[] { "collection1", "collection2" }) {
                 syncClient.getDatabase(db).getCollection(coll).insertOne(json(""));
